--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:design:26.0.0-beta1'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.youth.banner:banner:1.4.10'
     compile 'org.litepal.android:core:1.6.1'
     compile 'com.google.code.gson:gson:2.8.2'
 }
