--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".GoodActivity" />
-        <activity android:name=".BuyActivity"></activity>
+        <activity android:name=".BuyActivity" />
+        <activity android:name=".CollectionActivity"></activity>
     </application>
 
 </manifest>
