完成订单页面数据展示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".GoodActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".CollectionActivity" />
-        <activity android:name=".ConcernActivity"></activity>
+        <activity android:name=".ConcernActivity" />
+        <activity android:name=".PurchaserTradeActivity"></activity>
     </application>
 
 </manifest>
