完成收到订单页面的数据展示和点击跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".BuyActivity" />
         <activity android:name=".CollectionActivity" />
         <activity android:name=".ConcernActivity" />
-        <activity android:name=".PurchaserTradeActivity"></activity>
+        <activity android:name=".PurchaserTradeActivity" />
+        <activity android:name=".SellerTradeActivity"></activity>
     </application>
 
 </manifest>
