完成我的代购页面数据展示和点击事件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".PurchaserTradeActivity" />
         <activity android:name=".SellerTradeActivity" />
         <activity android:name=".UpdateUserInfoActivity" />
-        <activity android:name=".PublishGoodsActivity"></activity>
+        <activity android:name=".PublishGoodsActivity" />
+        <activity android:name=".MyGoodsActivity"></activity>
     </application>
 
 </manifest>
