--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".UpdateUserInfoActivity" />
         <activity android:name=".PublishGoodsActivity" />
         <activity android:name=".MyGoodsActivity" />
-        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".NotificationActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
