完成更新商品信息页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".PublishGoodsActivity" />
         <activity android:name=".MyGoodsActivity" />
         <activity android:name=".NotificationActivity" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".UpdateGoodsActivity"></activity>
     </application>
 
 </manifest>
