修改find为findFirst，并人工检查一遍

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".ConcernActivity" />
         <activity android:name=".PurchaserTradeActivity" />
         <activity android:name=".SellerTradeActivity" />
-        <activity android:name=".UpdateUserInfoActivity"></activity>
+        <activity android:name=".UpdateUserInfoActivity" />
         <activity android:name=".PublishGoodsActivity" />
         <activity android:name=".MyGoodsActivity" />
         <activity android:name=".NotificationActivity" />
@@ -35,7 +35,8 @@
         <activity android:name=".UpdateGoodsActivity" />
         <activity android:name=".CommentActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".AuthenticateActivity"></activity>
+        <activity android:name=".AuthenticateActivity" />
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
