实现接受消息，还没实现发送消息

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.zhihu.android:matisse:0.4.3'
     compile 'com.lzy.widget:ninegridview:0.2.0'
+    compile ('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
+
+
 }
