--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".goods.GoodActivity" />
+        <activity android:name=".goods.GoodActivity" >
+
+        </activity>
         <activity android:name=".trade.BuyActivity" />
         <activity android:name=".goods.CollectionActivity" />
         <activity android:name=".user.ConcernActivity" />
@@ -33,7 +35,9 @@
         <activity android:name=".goods.PublishGoodsActivity" />
         <activity android:name=".goods.MyGoodsActivity" />
         <activity android:name=".message.NotificationActivity" />
-        <activity android:name=".ui.SearchActivity" />
+        <activity android:name=".ui.SearchActivity" >
+
+        </activity>
         <activity android:name=".goods.UpdateGoodsActivity" />
         <activity android:name=".trade.CommentActivity" />
         <activity android:name=".ui.RegisterActivity" />
